Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-2846. Flaky test: TestCommit.testVertexCommit_OnDAGSuccess.
  TEZ-3289. Tez Example MRRSleep job does not set Staging dir correctly on secure cluster.
  TEZ-3276. Tez Example MRRSleep job fails when tez.staging-dir fs is not same as default FS.
  TEZ-3280. LOG MRInputHelpers split generation message as INFO
  TEZ-909.  Provide support for application tags
  TEZ-3257. Fix flaky test TestUnorderedPartitionedKVWriter.
  TEZ-3206. Have unordered partitioned KV output send partition stats via VertexManagerEvent.
  TEZ-3237. Corrupted shuffle transfers to disk are not detected during transfer
  TEZ-3240. Improvements to tez.lib.uris to allow for multiple tarballs and mixing tarballs and jars.
  TEZ-3246. Improve diagnostics when DAG killed by user
  TEZ-3258. Jvm Checker does not ignore DisableExplicitGC when checking JVM GC options.
  TEZ-3256. [Backport HADOOP-11032] Remove Guava Stopwatch dependency
  TEZ-2342. Reduce bytearray copy with TezEvent Serialization and deserialization
  TEZ-3251. Allow ability to add custom counters to TaskRunner2Callable.
  TEZ-3250. TezTaskRunner2 should accept ExecutorService.
  TEZ-3245. Data race between addKnowInput and clearAndGetOnepartition of InputHost.
  TEZ-3193. Deadlock in AM during task commit request.
  TEZ-3203. DAG hangs when one of the upstream vertices has zero tasks
  TEZ-3207. Add support for fetching multiple partitions from the same source task to UnorderedKVInput.
  TEZ-3232. Disable randomFailingInputs in testFaulttolerance to unblock other tests.
  TEZ-3219. Allow service plugins to define log locations link for remotely run task attempts.
  TEZ-3224. User payload is not initialized before creating vertex manager plugin.
  TEZ-3226. Tez UI 2: All DAGs UX improvements.
  TEZ-3077. TezClient.waitTillReady should support timeout.
  TEZ-3202. Reduce the memory need for jobs with high number of segments